--- a/olyps/olyp-0002.md
+++ b/olyps/olyp-0002.md
@@ -24,7 +24,7 @@
      
 ## Abstract
 
-The Olympus consensus mechanisms require specific data to be allocated on-chain to validate it during the initial blockchain download or the block and transactions broadcast process.  
+The THEMIS consensus mechanisms require specific data to be allocated on-chain to validate it during the initial blockchain download or the block and transactions broadcast process.  
   
 Other protocols use for that data transfer a simply p2p layer that communicates the nodes and use on-chain data to validate that information.
 
@@ -76,7 +76,7 @@ It is crucial to declare that not all actions can be used on all types.
 ID | Type | Action | Short Name | Operation
 ---|---|---|---|---
 1 | Coins | Transfer | `coin-transfer` | Change the ownership of coins
-2 | Coins | Generate | `coin-generate` | Create coins
+2 | Coins | Generate | `coin-generate` | Create coins (Coinbase transaction)
 3 | Coins | Pay | `coin-pay` | Change the ownership of coins to a non-user.
 4 | Worker | Upload | `worker-register` | Add a new worker to the list
 5 | Worker | Update | `worker-update` | Update a worker on the list
@@ -131,7 +131,7 @@ All the transactions should be constructed using the same information model. The
  TxOut | []Outputs | Outputs to assign the coins to.
  
 Implementations:
-* [Ogen](https://github.com/grupokindynos/ogen/blob/develop/txs/txpayloads/coins/coins.go)
+* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/coins/coins.go)
 
 ##### Workers
 
@@ -154,7 +154,7 @@ WorkerID | OutPoint | The signature of the address that owns the collateral to p
 
 
 Implementations:
-* [Ogen](https://github.com/grupokindynos/ogen/blob/develop/txs/txpayloads/workers/workers.go)
+* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/workers/workers.go)
 
 ##### Governance
 
@@ -180,7 +180,7 @@ PubKey | [48]byte | The serialized public key of the address that burned the coi
 Sig | [96]byte | The serialized signature of the address that burned the collateral to prove ownership.
 
 Implementations:
-* [Ogen](https://github.com/grupokindynos/ogen/blob/develop/txs/txpayloads/gov/gov.go)
+* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/gov/gov.go)
 
 ##### Vote
 
@@ -204,7 +204,7 @@ Sig | [96]byte | The serialized signature of the address that has the collateral
 GovID | []byte | The byte representation from the hash of the proposal that is being voted.
 
 Implementations:
-* [Ogen](https://github.com/grupokindynos/ogen/blob/develop/txs/txpayloads/votes/votes.go)
+* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/votes/votes.go)
 
 ##### Users
 
@@ -233,4 +233,4 @@ Name | string | The name string to revoke
 Sig | [96]byte | The serialized signature of the address to revoke.
 
 Implementations:
-* [Ogen](https://github.com/grupokindynos/ogen/blob/develop/txs/txpayloads/users/users.go)
+* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/users/users.go)
