--- a/olyps/olyp-0003.md
+++ b/olyps/olyp-0003.md
@@ -23,6 +23,28 @@ To get more information about how Olympus generates and uses HD wallets, please 
 1. Bitcoin BIP32: https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki
 2. Chia BLS HD wallets guidelines: https://github.com/Chia-Network/bls-signatures/blob/master/SPEC.md#hd-keys
 
+## Path levels
+
+As defined on `BIP44` for HD wallets there is a standard for Path levels to derive addresses.
+
+As Olympus extends the address types with the following schemes:
+
+### Standard path levels
+
+```
+m / purpose' / coin_type' / account' / address_type / address_index
+```
+
+The address type is defined as follows:
+
+Number | Address Type 
+--- | --- 
+0 | Direct Payment Address
+1 | Change Address
+2 | Contract Address
+3 | User address
+
+
 ## Implementations
 
 1. Go: https://github.com/grupokindynos/ogen-utils/tree/master/hdwallets
