--- a/olyps/olyp-0006.md
+++ b/olyps/olyp-0006.md
@@ -1,6 +1,6 @@
 <pre>
   OLYP: 0006
-  Title: Definition of the Olympus Byzantine Fault Tolerant consensus system
+  Title: Definition of the Olympus Byzantine Fault Tolerant consensus system (THEMIS)
   Author: Enrique Berrueta &lt;eabz@kindynos.mx&gt;
   Comments-Summary: No comments yet.
   Status: Draft
