--- a/olyps/olyp-0007.md
+++ b/olyps/olyp-0007.md
@@ -1,6 +1,6 @@
 <pre>
   OLYP: 0007
-  Title: Pay-To-Network scheme and Profit Sharing
+  Title: Pay-To-Network and Profit Sharing schemes
   Author: Enrique Berrueta &lt;eabz@kindynos.mx&gt;
   Comments-Summary: No comments yet.
   Status: Draft
