--- a/olyps/olyp-0004.md
+++ b/olyps/olyp-0004.md
@@ -20,7 +20,7 @@
 
 The Olympus protocol verification system standards need to be clarified to prevent skipping validations of critical things.
 
-Since verifications are done using pairing cryptographic tools, we must ensure all data is present on the signatures using Merkle trees.
+Since verifications are done using pairing cryptographic tools, we must ensure all data is present on the signatures.
 
 These verifications enable the network to scale on user experience and data capacity levels. 
 
@@ -39,6 +39,13 @@ With the development of cryptography, new ways of verifying large amounts of inf
 One of the best solutions is the pairing cryptography, specifically the [Boneh–Lynn–Shacham](https://en.wikipedia.org/wiki/Boneh%E2%80%93Lynn%E2%80%93Shacham) signatures scheme.
 
 Using this new signature scheme can improve a lot the user experience and data validation to increase adoption towards cryptocurrencies.
+
+### Verification steps
+
+For each transactions there are two main steps that must be verified for a single element or in bulk for faster verification.
+
+1. Match verifications: This verifies signatures are used using on-chain data. This step always verifies received data agains each node indexed data. This step is always the first step.
+2. Signature verifications: This verifies signatures are properly signed using the correct Private Key.
 
 ### Verification Scenarios
 
