--- a/olyps/olyp-0005.md
+++ b/olyps/olyp-0005.md
@@ -1,6 +1,6 @@
 <pre>
   OLYP: 0005
-  Title: Coin-agnostic chain for code-based assets
+  Title: Definition of the Olympus Byzantine Fault Tolerant consensus system (THEMIS)
   Author: Enrique Berrueta &lt;eabz@kindynos.mx&gt;
   Comments-Summary: No comments yet.
   Status: Draft
@@ -11,13 +11,108 @@
 
 ## Table of Contents
 
- * [Abstract](#abstract)
- * [Motivations](#motivations)
+* [Abstract](#abstract)
+* [Motivations](#motivations)
+* [Problems](#problems)
+    * [Byzantine fault](#byzantine-fault)
+    * [Double spending](#double-spending)
+* [Implemented solutions and flaws](#implemented-solutions-and-flaws)
+* [Defining "THEMIS"](#defining-themis)
+    * [Definitions](#definitions)
+    * [Worker list](#worker-list)
+    * [Coin Agnostic](#coin-agnostic)
+    * [Chain reorganizations](#chain-reorganizations)
+    * [Considerations](#considerations-and-flaws)
+* [Implementations](#implementations)
+* [Copyright](#copyright)
 
- 
 ## Abstract
 
+The Bitcoin revolution has opened a new panorama into the development of digital currencies.
+
+Though those solutions are very creative and solve actual problems needed for the society to give control to the people of their financial assets, there are still some flaws in those models and new solutions surge.
+
+This new consensus mechanism aims to solve the significant issues overall cryptocurrencies to make sure the user experience and long-term scaling is not an issue. 
+    
 ## Motivations
+
+The development of this consensus model aims to solve two issues. 
+
+1. The current Proof-of-work consensus mechanism is unsafe for any other coin than Bitcoin, and the Proof-of-Stake is either centralized or unnecessary computationally expensive and difficult to scale on long-term.
+2. The development of alternative currencies is highly centralized.
+
+This system pretends to create a new utxo based consensus mechanism that can coexist with multiple assets within the same chain and is computationally easy to solve and cryptographically secure.
+
+## Problems
+
+Any distributed system that aims to create a network to transact value assets must solve two main issues. Those issues are the "Byzantine Fault" and "The Double-Spending."
+
+### Byzantine fault
+
+The Byzantine fault is a collective term to refer a problem with systems (and particularly on distributed systems) on which a part of a system can cause catastrophic issues by providing wrong information among the peers or system parts. The term Byzantine was used due to the similarity of the problem that generals faced when trying to coordinate an attack using only messages. 
+
+### Double spending
+
+The double-spending issue refers to a problem in digital cash on which coins can be spent twice at the same time. 
+
+## Implemented solutions and flaws
+
+On the blockchain development, there are multiple solutions for this issue. Those solutions -consensus mechanism- look to achieve a consensus between all participants over the network. 
+
+Some of the most common solutions for these issues are:
+Satoshi's Proof-of-Work
+PeerCoin Proof-of-Stake
+Bitshares Delegated Proof-of-Stake
+
+While those mechanisms solve the byzantine fault and the double-spending problems, those models have other flaws that moved us to propose a new consensus model.
+
+It is not the purpose of this text to explain the whole model of consensus mechanism used by those protocols, but we are just going to enumerate some flaws.
+
+### Poof-of-Work: 
+
+The "POW" model is the Bitcoin consensus mechanism.
+
+While this model has proven to be secure for the Bitcoin blockchain, as we have already seen, another coin cannot achieve that level of security.
+
+This consensus mechanism is based on competence between nodes to achieve the most significant work; this makes chain-reorganizations a necessity for the network. Chain-reorganizations are the principle of a 51% double-spending attack.
+
+There are other variations of the POW mechanism, but those modifications only create centralization over the consensus mechanism model.
+
+### Proof-of-Stake
+
+The "POS" model is the PeerCoin consensus mechanism.
+
+The Proof-of-Stake model has the same principles of the proof-of-work model about competition and difficulty achievement by the network, but instead of using work as a matter of difficulty calculator, it uses coins.
+
+Since POS is based on POW, it inherits its flaws, chain-reorganizations and is also vulnerable to a 51% attack.
+
+Another flaw in the POS consensus mechanism is the amount of information required to verify the validity of the coinstake.
+
+### Delegated Proof-of-Stake
+
+The "dPOS" model is the Bitshares consensus mechanism.
+
+The delegate Proof-of-Stake model is a non-difficulty base mechanism where nodes are chosen among the network to produce the blocks without any difficulty assigned. This model can produce blocks every 10 seconds without any competition.
+
+The main disadvantage of this model is centralization. Since nodes are selected using a voting mechanism, it doesn't allow any user to participate in the consensus mechanism.
+
+## Defining "THEMIS"
+
+### Definitions
+
+### Worker list
+
+### Chain reorganizations
+
+### Considerations and flaws
+
+## Implementations
+
+The current consensus mechanism has two main implementations. 
+1. [Ogen (written in Go)](https://github.com/grupokindynos/ogen)
+2. [(work-in-progress) Rhea (written in Rust)](https://github.com/grupokindynos/rhea)
+
+   
 
 ## Copyright
 
