--- a/olyps/olyp-0005.md
+++ b/olyps/olyp-0005.md
@@ -3,7 +3,7 @@
   Title: Definition of the Olympus Byzantine Fault Tolerant consensus system (THEMIS)
   Author: Enrique Berrueta &lt;eabz@kindynos.mx&gt;
   Comments-Summary: No comments yet.
-  Status: Draft
+  Status: Final
   Type: Standard
   Created: 18/Dic/2019
   License: MIT License
