--- a/olyps/olyp-0004.md
+++ b/olyps/olyp-0004.md
@@ -3,7 +3,7 @@
   Title: Block and Transactions verifications flow.
   Author: Enrique Berrueta &lt;eabz@kindynos.mx&gt;
   Comments-Summary: No comments yet.
-  Status: Draft
+  Status: Final
   Type: Standard
   Created: 18/Dic/2019
   License: MIT License
