--- a/olyps/olyp-0005.md
+++ b/olyps/olyp-0005.md
@@ -22,7 +22,7 @@
     * [Worker list](#worker-list)
     * [Coin Agnostic](#coin-agnostic)
     * [Chain reorganizations](#chain-reorganizations)
-    * [Considerations](#considerations-and-flaws)
+    * [Considerations](#considerations)
 * [Implementations](#implementations)
 * [Copyright](#copyright)
 
@@ -60,9 +60,9 @@ The double-spending issue refers to a problem in digital cash on which coins can
 On the blockchain development, there are multiple solutions for this issue. Those solutions -consensus mechanism- look to achieve a consensus between all participants over the network. 
 
 Some of the most common solutions for these issues are:
-Satoshi's Proof-of-Work
-PeerCoin Proof-of-Stake
-Bitshares Delegated Proof-of-Stake
+* Satoshi's Proof-of-Work
+* PeerCoin Proof-of-Stake
+* Bitshares Delegated Proof-of-Stake
 
 While those mechanisms solve the byzantine fault and the double-spending problems, those models have other flaws that moved us to propose a new consensus model.
 
@@ -98,19 +98,52 @@ The main disadvantage of this model is centralization. Since nodes are selected 
 
 ## Defining "THEMIS"
 
+```
+THEMIS is an ancient Greek Titaness. She is described as "The Lady of good counsel," and is the personification of divine order, fairness, law, natural law, and custom.
+```
+
+The Olympus protocol consensus mechanism is called THEMIS. 
+
+It is defined as a deterministic and organized list of workers that produce blocks without any computational problem at its turn and on time.
+
 ### Definitions
+
+The base properties of the THEMIS consensus model are:
+Non-difficulty based: There is no requirement to solve any computational problem.
+Organized list: There is a list with organized peers to produce blocks at a particular time and fallback nodes to produce them if the primary node fails.
+Deterministic: Since the entire consensus depends on the consensus on the list, it should be deterministic and verifiable over time.
 
 ### Worker list
 
+A worker list is a group of collateralized nodes that are defined on-chain to make sure they can guarantee the network the ability to generate blocks. 
+
+To make the network decentralized, anybody can take part in the consensus algorithm. The only requirements to submit a worker into the worker list are: to prove the possession of a collateralized set of coins and keep it unspent and a static IP on which the network can reach the worker.
+
+Once a new worker is created into the network, peers agree to put it at the bottom of the worker list. This way, each worker moves on the list until their turn is reached and goes to the bottom when it creates and broadcasts the block successfully.
+    
+The collateral required by the network is not at a fixed amount; anybody can collateralize any amount between 10 and 1000 coins.
+    
+To make sure users are willing to spend time and effort to make sure the workers are available for the network, the blockchain incentivizes them by giving them newly generated coins based on the proportionality of their collateral.
+
 ### Chain reorganizations
 
-### Considerations and flaws
+Since THEMIS is non-difficulty based, each worker creates the block at an organizational level, so, the principle of "the valid chain is the longest" is no more valid on this consensus mechanism, hence, no need for chain-reorganizations.
+
+Remove chain-reorganizations give real advantages to the Olympus network since the immutability of the information is achieved at the first block and no need for further confirmations.
+
+### Considerations
+
+There is an important consideration about the launch of the any chain using the THEMIS mechanism that needs to take into account.
+	
+Since the algorithms rely entirely on the worker list and the workers need coins to be added into the list, then the launch of a network using THEMIS algorithm is completely centralized since there must be a hardcoded private key to create the first blocks until the network tokens are distributed.
+	
+But to solve centralization on the main network launch, the Olympus will take a snapshot on a particular block of the old Polis network and distribute those coins for the users to redeem them. That way, no rewards are generated before the entire network can take part in the consensus mechanism.
 
 ## Implementations
 
 The current consensus mechanism has two main implementations. 
-1. [Ogen (written in Go)](https://github.com/grupokindynos/ogen)
-2. [(work-in-progress) Rhea (written in Rust)](https://github.com/grupokindynos/rhea)
+1. [Ogen (written in Go)](https://github.com/olympus-protocol/ogen)
+2. [(work-in-progress) Rhea (written in Rust)](https://github.com/olympus-protocol/rhea)
 
    
 
