--- a/olyps/olyp-0005.md
+++ b/olyps/olyp-0005.md
@@ -109,9 +109,10 @@ It is defined as a deterministic and organized list of workers that produce bloc
 ### Definitions
 
 The base properties of the THEMIS consensus model are:
-Non-difficulty based: There is no requirement to solve any computational problem.
-Organized list: There is a list with organized peers to produce blocks at a particular time and fallback nodes to produce them if the primary node fails.
-Deterministic: Since the entire consensus depends on the consensus on the list, it should be deterministic and verifiable over time.
+
+* Non-difficulty based: There is no requirement to solve any computational problem.
+* Organized list: There is a list with organized peers to produce blocks at a particular time and fallback nodes to produce them if the primary node fails.
+* Deterministic: Since the entire consensus depends on the consensus on the list, it should be deterministic and verifiable over time.
 
 ### Worker list
 
