Remove dupliaceted information and add Quroum Txs

--- a/olyps/olyp-0002.md
+++ b/olyps/olyp-0002.md
@@ -54,17 +54,18 @@ ID | Type | Index
 3 | Governance | Governance
 4 | Votes | Governance
 5 | Users | Users
+6 | Quorums | Quorums
+
 
 
 #### Transaction Actions
 
 ID | Action | Job
 --- | --- | --- 
-1 | Transfer |  Change ownership
-2 | Revoke | Remove from the index
-3 | Update | Change the payload
-4 | Upload | Add to the index
-5 | Generate | Create new data
+1 | Transfer | Change data ownership
+2 | Delete | Delete data from the index
+3 | Update | Update existent data on the index.
+4 | Create | Add new data to the index.
 
 #### Olympus Transactions
 
@@ -74,19 +75,20 @@ It is crucial to declare that not all actions can be used on all types.
 ID | Type | Action | Short Name | Operation
 ---|---|---|---|---
 1 | Coins | Transfer | `coin-transfer` | Change the ownership of coins
-2 | Coins | Generate | `coin-generate` | Create coins (Coinbase transaction)
-4 | Worker | Upload | `worker-register` | Add a new worker to the list
+2 | Coins | Create | `coin-create` | Create new coins (Coinbase transaction)
+4 | Worker | Create | `worker-create` | Create a new worker to the index
 5 | Worker | Update | `worker-update` | Update a worker on the list
-6 | Worker | Revoke | `worker-revoke` | Remove a worker from the list
-7 | Governance | Upload | `gov-register` | Add a governance proposal
-8 | Governance | Revoke | `gov-revoke` | Remove a governance proposal
-9 | Vote | Upload | `vote-register` | Add a vote to a certain proposal
+6 | Worker | Delete | `worker-delete` | Delete a worker from the list
+7 | Governance | Create | `gov-create` | Create a new governance proposal
+8 | Governance | Delete | `gov-delete` | Remove a governance proposal
+9 | Vote | Create | `vote-create` | Create a vote object on the list
 10 | Vote | Update | `vote-update` | Update a vote to a certain proposal
-11 | Vote | Revoke | `vote-revoke` | Remove a vote from a proposal
-12 | User | Upload | `user-register` | Add a new user to the list
+11 | Vote | Delete | `vote-delete` | Delete a vote from a proposal
+12 | User | Create | `user-create` | Create a new user to the list
 13 | User | Update | `user-update` | Update the user information
-14 | User | Revoke | `user-revoke` | Remove the user from the list
-
+14 | User | Delete | `user-delete` | Delete the user from the list
+15 | Quorums | Create | `quorum-create` | Create a new worker quorum
+16 | Quorums | Update | `quorum-update` | Update a worker quorum
 
 ### Specifications
 
@@ -100,126 +102,3 @@ All the transactions should be constructed using the same information model. The
  TxVersion | int32 | Version of the transaction.
  TxType | int32 | Selected transaction type.
  TxAction | int32 | Selected action.
-
-#### Transaction payload
-
-##### Coins
-
-`Transfer`
-
- Name | Type | Usage 
----|---|---
- AggSig | [96]byte | The serialized aggregated signature to verify all inputs ownership.
- TxIn | []Inputs | Signed inputs to prove coins ownership.
- TxOut | []Outputs | Outputs to assign the coins to.
- 
-`Generate`
-
- Name | Type | Usage 
----|---|---
- TxOut | []Outputs | The block generated rewards
- 
-Implementations:
-* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/coins/coins.go)
-
-##### Workers
-
-`Upload` and `Update`
-
-Name | Type | Usage
---- | --- | ---
-Utxo | OutPoint | The utxo reference for the collateral to use.
-PubKey | [48]byte | The serialized public key of the address that owns the collateral.
-Sig | [96]byte | The serialized signature of the address that owns the collateral to prove ownership.
-IP | string | Public IP address of the worker. Should be a valid IPv4, IPv6, or onion address.
-
-`Revoke`
-
-Name | Type | Usage
---- | --- | ---
-PubKey | [48]byte | The serialized public key of the address that owns the collateral.
-Sig | [96]byte | The serialized signature of the address that owns the collateral to prove ownership.
-WorkerID | OutPoint | The signature of the address that owns the collateral to prove ownership.
-
-
-Implementations:
-* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/workers/workers.go)
-
-##### Governance
-
-`Upload`
-
-Name | Type | Usage
---- | --- | ---
-BurnedUtxo | OutPoint | The reference of the input used for the collateral burn.
-PubKey | [48]byte | The serialized public key of the address that burned the coins.
-Sig | [96]byte | The serialized signature of the address that burned the collateral to prove ownership.
-Name | string | The name of the proposal.
-URL | string | A URL containing information for the proposal.
-PayoutAddress | string | The address to pay the proposal.
-Amount | int64 | The amount to receive per cycle.
-Cycles | int32 | The number of cycles to pay the proposal.
-
-`Revoke`
-
-Name | Type | Usage
---- | --- | ---
-GovID | []byte | The byte representation from the hash of the governance proposal to revoke.
-PubKey | [48]byte | The serialized public key of the address that burned the coins.
-Sig | [96]byte | The serialized signature of the address that burned the collateral to prove ownership.
-
-Implementations:
-* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/gov/gov.go)
-
-##### Vote
-
-`Upload and Update`
-
-Name | Type | Usage
---- | --- | ---
-WorkerID | OutPoint | The reference of the collateral of a worker.
-PubKey | [48]byte | The serialized public key of the address that has the collateral.
-Sig | [96]byte | The serialized signature of the address that has the collateral to prove ownership.
-GovID | []byte | The byte representation from the hash of the proposal that is being voted.
-Approval | bool | Approval for voting.
-
-`Revoke`
-
-Name | Type | Usage
---- | --- | ---
-WorkerID | OutPoint | The reference of the collateral of a worker.
-PubKey | [48]byte | The serialized public key of the address that has the collateral.
-Sig | [96]byte | The serialized signature of the address that has the collateral to prove ownership.
-GovID | []byte | The byte representation from the hash of the proposal that is being voted.
-
-Implementations:
-* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/votes/votes.go)
-
-##### Users
-
-`Upload`
-
-Name | Type | Usage
---- | --- | ---
-PubKey | [48]byte | The serialized public key of the address to use.
-Sig | [96]byte | The serialized signature of the address to use.
-Name | string | A unique username string.
-
-`Update`
-
-Name | Type | Usage
---- | --- | ---
-NewPubKey | [48]byte | The serialized new public key of the address to use.
-PubKey | [48]byte | The serialized old public key of the address used.
-Sig | [96]byte | The serialized signature of the address to use.
-Name | string | A unique username string.
-
-`Revoke`
-
-Name | Type | Usage
---- | --- | ---
-Name | string | The name string to revoke
-Sig | [96]byte | The serialized signature of the address to revoke.
-
-Implementations:
-* [Ogen](https://github.com/olympus-protocol/ogen/blob/develop/txs/txpayloads/users/users.go)
