--- a/olyps/olyp-0001.md
+++ b/olyps/olyp-0001.md
@@ -53,4 +53,4 @@ This definition is only to start the network and can be modified once the networ
 
 ## Copyright
 
-Copyright (c) 2019 Grupo Kindynos.  [Licensed under MIT License](https://opensource.org/licenses/MIT)
+Copyright (c) c Grupo Kindynos.  [Licensed under MIT License](https://opensource.org/licenses/MIT)
