--- a/olyps/olyp-0004.md
+++ b/olyps/olyp-0004.md
@@ -49,25 +49,34 @@ For each transactions there are two main steps that must be verified for a singl
 
 ### Verification Scenarios
 
-#### Transactions Verification
-
-* [Coin (Transfer)](olyp-0004/coin-transfers.md)
-* [Coin (Generate)](olyp-0004/coin-generate.md)
-* [Governance (Upload)](olyp-0004/governance-upload.md)
-* [Governance (Revoke)](olyp-0004/governance-revoke.md)
-* [User (Upload)](olyp-0004/user-upload.md)
-* [User (Update)](olyp-0004/user-update.md)
-* [User (Revoke)](olyp-0004/user-revoke.md)
-* [Vote (Upload/Update)](olyp-0004/vote-upload.md)
-* [Vote (Revoke)](olyp-0004/vote-revoke.md)
-* [Worker (Upload/Update)](olyp-0004/worker-upload.md)
-* [Worker (Revoke)](olyp-0004/worker-revoke.md)
-
 #### Blocks Verification
 
-* [Chain Sync](olyp-0004/chain-sync.md)
-* [New Block](olyp-0004/new-block.md)
+Verification | -
+---|---
+Chain Sync | [Specifications](olyp-0004/blocks/chain-sync.md)
+New Block | [Specifications](olyp-0004/blocks/new-block.md)
+
+#### Transactions Verification
+
+Type | Action | -
+---|---|---
+Coins | Transfer | [Specifications](olyp-0004/coins/coin-transfers.md)
+Coins | Create | [Specifications](olyp-0004/coins/coin-create.md)
+Worker | Create/Update | [Specifications](olyp-0004/workers/worker-create.md)
+Worker | Delete | [Specifications](olyp-0004/workers/worker-delete.md)
+Governance | Create | [Specifications](olyp-0004/gov/governance-create.md)
+Governance | Delete | [Specifications](olyp-0004/gov/governance-create.md)
+Vote | Create/Update | [Specifications](olyp-0004/votes/vote-create.md)
+Vote | Delete | [Specifications](olyp-0004/votes/vote-delete.md)
+User | Create | [Specifications](olyp-0004/users/user-create.md)
+User | Update | [Specifications](olyp-0004/users/user-update.md)
+User | Delete | [Specifications](olyp-0004/users/user-delete.md)
+Quorums | Create | [Specifications](olyp-0004/quorum/quorum-create.md)
+Quorums | Update | [Specifications](olyp-0004/quorum/quorum-delete.md)
+
+
+
 
 ## Copyright
 
-Copyright (c) 2019 Grupo Kindynos.  [Licensed under MIT License](https://opensource.org/licenses/MIT)
+Copyright (c) 2020 Grupo Kindynos.  [Licensed under MIT License](https://opensource.org/licenses/MIT)
