--- a/olyps/olyp-0005.md
+++ b/olyps/olyp-0005.md
@@ -126,6 +126,12 @@ The collateral required by the network is not at a fixed amount; anybody can col
     
 To make sure users are willing to spend time and effort to make sure the workers are available for the network, the blockchain incentivizes them by giving them newly generated coins based on the proportionality of their collateral.
 
+### Worker Quorums
+
+The quorums are a group of constant communicated worker nodes that verify the workers produced information before broadcasting to the network.
+
+A quorum is the only authorized member of the network to broadcast blocks, this way we can guarantee there are no malicious workers on the network.
+
 ### Chain reorganizations
 
 Since THEMIS is non-difficulty based, each worker creates the block at an organizational level, so, the principle of "the valid chain is the longest" is no more valid on this consensus mechanism, hence, no need for chain-reorganizations.
@@ -144,7 +150,7 @@ But to solve centralization on the main network launch, the Olympus will take a 
 
 The current consensus mechanism has two main implementations. 
 1. [Ogen (written in Go)](https://github.com/olympus-protocol/ogen)
-2. [(work-in-progress) Rhea (written in Rust)](https://github.com/olympus-protocol/rhea)
+2. (work-in-progress) Rhea (written in Rust)
 
    
 
