--- a/olyps/olyp-0001.md
+++ b/olyps/olyp-0001.md
@@ -1,56 +1,40 @@
 <pre>
   OLYP: 0001
-  Title: Block size standards
+  Title: Hierarchicaly Deterministc wallets standards with BLS12-381 signatures
   Author: Enrique Berrueta &lt;eabz@kindynos.mx&gt;
   Comments-Summary: No comments yet.
   Status: Final
-  Type: Standard
-  Created: 18/Dic/2019
+  Type: Informational
+  Created: 14/Dic/2019
   License: MIT License
 </pre>
 
 
-## Table of Contents
+## Information
 
-1. [Abstract](#abstract)
-2. [Motivations](#motivations)
-3. [Definition](#definition)
+The Hierarchically Deterministic (HD) wallets are the commonly used address generation mechanism for Olympus protocol.
+This implementation has many advantages from only public/private key pairs.
 
-## Abstract
+This implementation is inherited from the Bitcoin Core Developers and modified for the Olympus Protocol.
 
-To properly launch the Olympus network, a low initial block size must be established. 
+Since Olympus uses a different cryptographic proof mechanism, the HD wallets standard differs a little from the original creation.
 
-For the Olympus protocol consensus model, a low latency level is necessary for the block broadcast process. Taking account of the usage of the blockchain at the beginning is relatively low, the maximum block size should be low too.
+To get more information about how Olympus generates and uses HD wallets, please refer to the following documents:
+1. Bitcoin BIP32: https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki
+2. Chia BLS HD wallets guidelines: https://github.com/Chia-Network/bls-signatures/blob/master/SPEC.md#hd-keys
 
-This block size can be upgraded later.
+## Path levels
 
-## Motivations
+As defined on `BIP44` for HD wallets there is a standard for Path levels to derive addresses.
 
-With the development of different blockchain-based consensus systems, there has been a ton of solutions for scaling those networks. Since peer-to-peer network relays on the capacity of data transfer over a network channel, the discussion of the optimal block size has been hard.
+As Olympus extends the address types with the following schemes:
 
-The block size defines the maximum amount of transactions that can be processed on the network and included on it at a specific time. 
-For multiple networks, this has been the bottleneck on transaction capacity scalability.
+### Standard path levels
 
-The purpose of this proposal is to establish an initial size and to standardize the decision-making mechanism to create a proposal to increase de maximum block size.
+```
+m / purpose' / coin_type' / account
+```
 
-### Low Block Size.
+## Implementations
 
-The Byzantine Fault Torelant mechanism for the Olympus network relays on the validity of the block proposer or worker. Those workers are collateralized nodes (which means they have demonstrated ownership of a certain amount of coins), and these are selected based on the total worker list. 
-
-With that mechanism, there is no need at all to include difficulty mechanism or reorganization operations, commonly used on Proof-of-Work and Proof-of-Stake mechanisms. 
-
-Since there is no difficulty in creating the blocks, the mechanism should space those blocks based on timestamps. 
-
-For that reason, it is strictly necessary for the blocks to spread fast into the network, which prevents a node from getting the block too late and hence rejecting the block.
-
-## Definitions
-
-Taking on account that an average transaction size is ~128 bytes. The goal for the network would be to reach a total block size of 2 MB over time. 
-As an initial deployment, the best block size for the beginning should be as low as possible without interfering with the initial network scalability. The proposed block size to start is 128kb; this enables the network to confirm ~10 tx/s.
-
-This definition is only to start the network and can be modified once the network receives enough demand, and the threshold of 10 tx/s is not long enough.
-
-
-## Copyright
-
-Copyright (c) c Grupo Kindynos.  [Licensed under MIT License](https://opensource.org/licenses/MIT)
+1. Go: https://github.com/olympus-protocol/ogen/utils/tree/master/hdwallets
