--- a/olyps/olyp-0001.md
+++ b/olyps/olyp-0001.md
@@ -32,9 +32,10 @@ As Olympus extends the address types with the following schemes:
 ### Standard path levels
 
 ```
-m / purpose' / coin_type' / account
+m / 44' / 1997' / account' / 0
 ```
 
 ## Implementations
 
 1. Go: https://github.com/olympus-protocol/ogen/utils/tree/master/hdwallets
+1. Javascript: https://github.com/olympus-protocol/bip32-bls
