--- a/olyps/olyp-0001.md
+++ b/olyps/olyp-0001.md
@@ -27,9 +27,7 @@ To get more information about how Olympus generates and uses HD wallets, please 
 
 As defined on `BIP44` for HD wallets there is a standard for Path levels to derive addresses.
 
-As Olympus extends the address types with the following schemes:
-
-### Standard path levels
+### Standard path level
 
 ```
 m / 44' / 1997' / account' / 0
